--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:500);
 .App {
+  background-color: #bcdcdb;
   text-align: center;
   padding: 2% 5%;
 }
@@ -76,7 +77,7 @@ input[type="number"] {
 }
 
 .suggestions > li:hover {
-  background-color: #bcdcdb;
+  background-color: #c4c4c4;
 }
 
 .event {
@@ -89,11 +90,13 @@ input[type="number"] {
 }
 
 .details-btn {
+  color: #ffffff;
+  background-color: rgb(11, 11, 59);
   position: absolute;
   right: 5px;
   bottom: 5px;
   padding: 5px 8px;
-  border-radius: 4px;
+  border-radius: 8px;
   outline: none;
   cursor: pointer;
 }
