--- a/src/App.css
+++ b/src/App.css
@@ -80,16 +80,16 @@ input[type="number"] {
   background-color: #c4c4c4;
 }
 
-.event {
+.Event {
   padding: 10px 10px 35px;
   margin-bottom: 10px;
   text-align: left;
-  border: 1px solid #ccc;
+  border: 1px solid black;
   border-radius: 4px;
   position: relative;
 }
 
-.details-btn {
+.toggleEvent {
   color: #ffffff;
   background-color: rgb(11, 11, 59);
   position: absolute;
