--- a/src/WelcomeScreen.css
+++ b/src/WelcomeScreen.css
@@ -4,7 +4,7 @@
     height: 100%;
     top: 0;
     background: white;
-    }
+}
 
 .login-button {
     color: #494949;
@@ -16,7 +16,7 @@
     transition: all 0.4s ease 0s;
     min-width: 10rem;
     margin: 1rem;
-    }
+}
 
 .google-btn {
     width: 184px;
@@ -25,39 +25,44 @@
     background-color: #4285f4;
     border-radius: 2px;
     box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
-    }
+}
 
 .google-btn:hover {
     box-shadow: 0 0 6px #4285f4;
-    }
+}
+    
 .google-btn:active {
-        background: #1669f2;
-        }
-
+    background: #1669f2;
+}
+    
 .google-icon-wrapper {
-        position: absolute;
-        margin-top: 1px;
-        margin-left: 1px;
-        width: 40px;
-        height: 40px;
-        border-radius: 2px;
-        background-color: #fff;
-        }
+    position: absolute;
+    margin-top: 1px;
+    margin-left: 1px;
+    width: 40px;
+    height: 40px;
+    border-radius: 2px;
+    background-color: #fff;
+}
+    
 .google-icon {
-        position: absolute;
-        margin-top: 11px;
-        margin-left: -8px;
-        width: 18px;
-        height: 18px;
-        }
+    position: absolute;
+    margin-top: 11px;
+    margin-left: -8px;
+    width: 20px;
+    height: 18px;
+}
+    
 .btn-text {
-        float: right;
-        color: #fff;
-        font-size: 14px;
-        letter-spacing: 0.2px;
-        font-family: "Roboto";
-        background-color: #4285f4;
-        width: 80%;
-        height: 100%;
-        text-align: center;
-        }
+    float: right;
+    color: #fff;
+    font-size: 13px;
+    letter-spacing: 0.2px;
+    font-family: "Roboto";
+    background-color: #4285f4;
+    width: 80%;
+    height: 100%;
+    text-align: center;
+    margin-top: 0px;
+    padding-left:15px;
+}
