--- a/src/WelcomeScreen.css
+++ b/src/WelcomeScreen.css
@@ -3,8 +3,18 @@
     width: 100%;
     height: 100%;
     top: 0;
-    background: white;
+    background: #bcdcdb;
 }
+
+.WelcomeScreen h1 {
+    font-style: italic;
+    font-weight: 200;
+}
+
+.WelcomeScreen h4 {
+    color: #494949;
+}
+
 
 .login-button {
     color: #494949;
@@ -23,8 +33,8 @@
     height: 42px;
     margin: 1rem;
     background-color: #4285f4;
-    border-radius: 2px;
-    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
+    box-shadow: 0 3px 4px 0;
 }
 
 .google-btn:hover {
@@ -41,7 +51,7 @@
     margin-left: 1px;
     width: 40px;
     height: 40px;
-    border-radius: 2px;
+    border-radius: 4px;
     background-color: #fff;
 }
     
