--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,13 @@
 .title {
   font-size: 50px;
   font-weight: 200;
-  padding-top: 15px;
+  padding-top: 15px 0 0 0;
+  border: 1px solid;
+}
+
+.header {
+  margin: 0;
+  border: 1px solid;
 }
 
 ul {
